# meetmind

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 444d35839366_create_meetings_and_tickets_tables.py  a1b2c3d4e5f6_drop_voice_summary_path_from_meetings.py  fede6c31a5b4_add_summary_fields_to_meetings.py
app/: config.py  main.py
app/agent/: graph.py  state.py
app/agent/nodes/: analyzer.py  decision.py  extractor.py  hitl.py  jira_push.py  summarizer.py  ticket_gen.py  validator.py
app/api/: routes.py  schemas.py
app/db/: base.py  models.py
app/tools/: voice_output.py
app/transcription/: meetingbaas_client.py
frontend/: .env.example  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: MeetingInput.jsx  StatusPoller.jsx  Summary.jsx  TicketReview.jsx
tests/: test_agent.py  test_api.py  test_db.py  test_decision.py  test_tools.py  test_transcription.py  test_validator.py
