[tool.poetry]
name = "meetmind"
version = "0.1.0"
description = "AI meeting assistant with LangGraph"
authors = ["Chitraksh Suri <chitrakshsuri2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.3"
uvicorn = "^0.49.0"
python-dotenv = "^1.2.2"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.1"
langchain = "^1.3.9"
langgraph = "^1.2.5"
langchain-anthropic = "^1.4.6"
deepgram-sdk = "^7.3.1"
httpx = "^0.28.1"
langchain-community = "^0.4.2"
langchain-openai = "^1.3.2"
openai = "^2.41.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.50"}
asyncpg = "^0.31.0"
alembic = "^1.18.4"
langgraph-checkpoint-postgres = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.4.0"
aiosqlite = "^0.22.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
